--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "D": "^1.0.0",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind-styled-components": "2.1.7"
   },
   "devDependencies": {
     "@types/node": "18.11.0",
