--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recoil": "^0.7.6",
     "tailwind-styled-components": "2.1.7"
   },
   "devDependencies": {
