--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "-": "^0.0.1",
-    "D": "^1.0.0",
+    "@tanstack/react-query": "^4.12.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recoil": "^0.7.6",
-    "tailwind-styled-components": "2.1.7"
+    "recoil": "^0.7.6"
   },
   "devDependencies": {
     "@types/node": "18.11.0",
@@ -31,6 +29,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
+    "tailwind-styled-components": "2.1.7",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.4"
   }
