--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@tanstack/react-query": "^4.12.0",
@@ -16,6 +17,8 @@
     "recoil": "^0.7.6"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/node": "18.11.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
@@ -27,6 +30,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.2.1",
+    "jest-environment-jsdom": "^29.2.1",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "tailwind-styled-components": "2.1.7",
